# wayland-macos

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  docker-compose.yml
.github/workflows/: build.yml
csrc/: rail_bridge.c  rail_bridge.h
docker/: Dockerfile  Dockerfile.kde  Dockerfile.kde-debian  Dockerfile.rail  entrypoint-rail.sh  entrypoint.sh  run-shell.sh  waypipe-macos.patch
docker/kwin-showwindows/: metadata.json
docker/kwin-showwindows/contents/code/: main.js
docker/waybar/: config.jsonc  style.css
scripts/: audio-follow-default.swift  build-msfreerdp.sh  build-waypipe.sh  e2e-resize-kwin.sh  mac-side.sh  pulseaudio-mac.pa  pulseaudio-mac.sh  run.sh  stop.sh  test-audio-preflight.sh
src/: cli.rs  host.rs  input.rs  ipc.rs  keymap.xkb  mac.rs  main.rs  rail.rs  rail_route.rs  router.rs  wayland.rs
src/bridges/: clipboard.rs  mod.rs
src/wayland/: bridges.rs  clipboard.rs  color_management.rs  compositor.rs  cursor_shape.rs  decoration.rs  fractional_scale.rs  keyboard_shortcuts_inhibit.rs  layer_shell.rs  mod.rs  output.rs  pointer_constraints.rs  presentation.rs  primary_selection.rs  relative_pointer.rs  seat.rs  shm.rs  single_pixel.rs  viewporter.rs  xdg_activation.rs  xdg_dialog.rs  xdg_output.rs  xdg_shell.rs  xdg_toplevel_icon.rs
