[package]
name = "wayland-macos"
version = "0.1.0"
edition = "2021"

[dependencies]
# Compiles xkb keymaps at runtime from a layout name (links system libxkbcommon
# + xkeyboard-config, via Homebrew) — no pre-baked keymap file needed.
xkbcommon = "0.8"
# Pure-Rust Wayland server backend (no system libwayland needed).
wayland-server = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "server", "staging", "unstable"] }
# wlr-layer-shell (standalone docked bars/panels).
wayland-protocols-wlr = { version = "0.3", features = ["server"] }
# Cocoa / AppKit bindings.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry", "NSData"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSWindow",
    "NSView",
    "NSResponder",
    "NSImage",
    "NSImageView",
    "NSColor",
    "NSRunningApplication",
    "NSEvent",
    "NSTrackingArea",
    "NSScreen",
    "NSPasteboard",
    "NSCursor",
] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes", "CFData"] }
objc2-core-graphics = { version = "0.3", features = [
    "CGImage",
    "CGColorSpace",
    "CGContext",
    "CGBitmapContext",
    # HDR path: build the CGImage directly over the raw buffer with an
    # HDR/wide-gamut colorspace (CGBitmapContext can't express 10-bit / PQ).
    "CGDataProvider",
] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "CATransaction", "objc2-core-foundation"] }
dispatch2 = "0.3"
memmap2 = "0.9"
libc = "0.2"
# --multiplex mode: WinCmd/InputEvent are serialized across the process boundary
# between the compositor and the per-app "window host" helpers (src/ipc.rs).
# bincode is compact for the raw pixel Vec<u8> a frame carries (JSON would balloon
# it); hand-rolling a codec for ~25 WinCmd variants is where silent wire bugs hide.
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
# Logging: the `log` facade (level macros + per-module `target:`) with the
# `env_logger` backend (filter via RUST_LOG, e.g. `RUST_LOG=wl=debug,mac=info`).
# The old `[wl]`/`[mac]`/… eprintln prefixes are now log targets.
log = "0.4"
env_logger = "0.11"

# Used only by the test client binary (src/bin/testclient.rs).
wayland-client = "0.31"
rustix = { version = "1.1.4", features = ["fs", "pipe", "event", "time", "process"] }

[features]
# Build the RAIL back-end (`--use-microsoft-rail-protocol`): compiles the
# FreeRDP C bridge (csrc/) and links FreeRDP 3 + WinPR. Off by default so a
# plain waypipe build needs no FreeRDP install. Requires `brew install freerdp`.
rail = []

[build-dependencies]
# Compiles the FreeRDP C bridge (csrc/rail_bridge.c) when the `rail` feature is on.
cc = "1"

[[bin]]
name = "wayland-macos"
path = "src/main.rs"

[[bin]]
name = "testclient"
path = "src/bin/testclient.rs"

[profile.dev]
opt-level = 1
